tests/printer/T15761.stderr
T15761.hs:5:1: error: [GHC-83865]
    • Expecting one more argument to ‘(Int + Bool) Double’
      Expected a type, but ‘(Int + Bool) Double’ has kind ‘* -> *’
    • In the data family instance declaration for ‘+’

