tests/printer/T15761.hs
{-# LANGUAGE TypeFamilies, TypeOperators #-}

data family (a + b) c d

data instance (Int + Bool) Double = Float
